Fix footer map visual issue on mobile

--- a/main/static/main/css/footer.css
+++ b/main/static/main/css/footer.css
@@ -1,4 +1,5 @@
 .footer {
+    clear: both;
     background: #ddd;
 }
 
@@ -37,15 +38,17 @@
 }
 
 .footer .map {
-    display: block;
     float: right;
     margin-bottom: 15px;
     max-width: 100%;
+    width: 350px;
+    height: 140px
 }
 
 @media (max-width: 750px) {
     .footer .map {
         float: inherit;
+        width: 100%;
     }
 
     .footer .django {
